# barbershop_website

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  DESIGN.md  GEMINI.md  PRODUCT.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  openapi.json  pyproject.toml  verify_m10.py
backend/alembic/: env.py
backend/alembic/versions/: 001_enable_btree_gist.py  002_stammdaten_entities.py  003_scheduling_entities.py  004_seed_salon_hours.py  005_booking_entities.py  006_phase1_auth_dayoverride.py  007_timestamptz.py  008_phase2_salon_profile.py  009_phase3_booking_notifications.py  010_update_address_and_hours.py  011_customer_account.py  012_service_categorization.py  013_promotions.py  014_service_price_from_and_azzam_seed.py  015_deactivate_non_board_services.py  016_working_intervals.py
backend/app/: main.py
backend/app/core/: base.py  config.py  database.py  exceptions.py
backend/barbershop_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: retention_cron.py  run_reminders.py  run_retention.py
backend/tests/: conftest.py
backend/tests/integration/: test_admin_endpoints.py  test_auth_endpoints.py  test_booking_constraint_pg.py  test_booking_integrity.py  test_customer_account.py  test_entities.py  test_marketing.py  test_online_booking_retention.py  test_p0_2_acceptance.py  test_p0_3_verify.py  test_performance.py  test_public_booking.py  test_public_cancellation.py  test_public_endpoints.py  test_public_services.py  test_quickstart.py
backend/tests/unit/: test_account_reschedule.py  test_auth.py  (+5 more)
(+185 files in other folders)
